microserv-user-account/src/main/java/org/example/microservuseraccount/error/exception/NotFoundUserAccountException.java
package org.example.microservuseraccount.error.exception;

public class NotFoundUserAccountException extends RuntimeException{
    public NotFoundUserAccountException(String message) {
        super(message);
    }
}
